fix register grid-gap

--- a/Front/src/styles/register.scss
+++ b/Front/src/styles/register.scss
@@ -39,7 +39,7 @@ body {
     border-radius: 30px;
     display: grid;
     grid-template-columns: 1fr;
-    grid-gap: 1rem;
+    grid-gap: 0.5rem;
   }
   input,
   button {
